# gufo_thor

./: .dockerignore  .gitignore  404.html  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Dockerfile  README.md  codecov.yml  gen_doc_stubs.py  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.devcontainer/: devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug-report.yml
.github/workflows/: build-docs.yml  codeql.yml  py-tests.yml
.requirements/: deps.txt  lint.txt  test.txt
CHANGELOG/: index.html
CODE_OF_CONDUCT/: index.html
CONTRIBUTING/: index.html
LICENSE/: index.html
codebase/: index.html
codequality/: index.html
dev/: index.html
dev/CODE_OF_CONDUCT/: index.html
dev/CONTRIBUTING/: index.html
dev/codebase/: index.html
dev/codequality/: index.html
dev/common/: index.html
dev/environment/: index.html
dev/standards/: index.html
dev/testing/: index.html
devcommon/: index.html
docs/: codebase.md  devcommon.md  faq.md  gen_doc_stubs.py  index.md  installation.md  standards.md
docs/dev/: codebase.md  index.md  standards.md  testing.md
docs/overrides/: index.html
docs/reference/: cli.md  config.md  index.md  templates.md
docs/reference/config/: SUMMARY.md  expose.md  index.md  labs.md  noc.md  pools.md  project.md  services.md  version.md
environment/: index.html
faq/: index.html
installation/: index.html
reference/: index.html
reference/cli/: index.html
reference/code/SUMMARY/: index.html
reference/code/gufo/thor/: index.html
reference/code/gufo/thor/artefact/: index.html
reference/code/gufo/thor/cli/: index.html
reference/code/gufo/thor/config/: index.html
reference/code/gufo/thor/docker/: index.html
reference/code/gufo/thor/error/: index.html
reference/code/gufo/thor/ip/: index.html
reference/code/gufo/thor/labs/: index.html
reference/code/gufo/thor/labs/base/: index.html
reference/code/gufo/thor/labs/vyos/: index.html
reference/code/gufo/thor/labs/vyos15/: index.html
reference/code/gufo/thor/log/: index.html
reference/code/gufo/thor/secret/: index.html
reference/code/gufo/thor/services/: index.html
reference/code/gufo/thor/services/activator/: index.html
reference/code/gufo/thor/services/auth/: index.html
reference/code/gufo/thor/services/base/: index.html
reference/code/gufo/thor/services/bh/: index.html
reference/code/gufo/thor/services/bi/: index.html
reference/code/gufo/thor/services/card/: index.html
reference/code/gufo/thor/services/chwriter/: index.html
reference/code/gufo/thor/services/consul/: index.html
reference/code/gufo/thor/targets/: index.html
reference/code/gufo/thor/utils/: index.html
reference/code/gufo/thor/validator/: index.html
reference/config/: index.html
reference/config/SUMMARY/: index.html
reference/config/expose/: index.html
reference/config/labs/: index.html
reference/config/noc/: index.html
reference/config/pools/: index.html
reference/config/project/: index.html
reference/config/services/: index.html
reference/config/version/: index.html
reference/templates/: index.html
search/: search_index.json
src/gufo/thor/: __init__.py  artefact.py  cli.py  config.py  docker.py  error.py  ip.py  log.py  secret.py  utils.py  validator.py
src/gufo/thor/labs/: __init__.py  base.py  vyos.py  vyos15.py
src/gufo/thor/samples/: common.yml  lab1.yml  simple.yml
src/gufo/thor/services/: __init__.py  activator.py  auth.py  base.py  bh.py  bi.py  card.py  chwriter.py  classifier.py  clickhouse.py  consul.py  correlator.py  datasource.py  datastream.py  discovery.py  envoy.py  escalator.py  grafanads.py  icqsender.py  kafka.py  kafkasender.py  liftbridge.py  login.py  mailsender.py  metrics.py  metricscollector.py  mib.py  migrate.py  mongo.py  mrt.py  mx.py  nbi.py  nginx.py  noc.py  ping.py  postgres.py  registrator.py  runner.py  sae.py  scheduler.py  (+12 more)
src/gufo/thor/targets/: __init__.py  base.py  compose.py
src/gufo/thor/templates/clickhouse/: config.xml  users.xml
src/gufo/thor/templates/envoy/: envoy.yaml
src/gufo/thor/templates/liftbridge/: liftbridge.yml
src/gufo/thor/templates/nginx/: nginx.conf  noc.conf
src/gufo/thor/templates/noc/: settings.yml  settings.yml.j2
src/gufo/thor/templates/traefik/: traefik.yml
standards/: index.html
testing/: index.html
tests/: conftest.py  test_artefact.py  test_compose.py  test_config.py  test_docker.py  test_ip.py  test_lab.py  test_project.py  test_secret.py  test_service.py  test_utils.py  test_validator.py  utils.py
tools/install/: thor-init.sh
(+45 files in other folders)
